force-app/main/default/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Donation.</description>
    <label>Donation</label>
    <nameField>
        <displayFormat>DON-{00000}</displayFormat>
        <label>Donation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>