force-app/main/default/objects/Donation__c/fields/Donor_Email__c.field-meta.xml
<CustomField>
    <fullName>Donor_Email__c</fullName>
    <label>Donor Email</label>
    <type>Email</type>
</CustomField>