force-app/main/default/objects/Donation__c/fields/Donor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Donor_Phone__c</fullName>
    <label>Donor Phone</label>
    <type>Phone</type>
</CustomField>