force-app/main/default/objects/Donation__c/fields/Organ_Type__c.field-meta.xml
<CustomField>
    <fullName>Organ_Type__c</fullName>
    <label>Organ Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>