force-app/main/default/objects/Donation__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood</fullName>
            </value>
            <value>
                <fullName>Plasma</fullName>
            </value>
            <value>
                <fullName>Platelets</fullName>
            </value>
            <value>
                <fullName>Organ</fullName>
            </value>
            <value>
                <fullName>Bone Marrow</fullName>
            </value>
            <value>
                <fullName>Blood Donation Camp</fullName>
                <isActive>false</isActive>
                <label>Blood Donation Camp</label>
            </value>
            <value>
                <fullName>Charity Care</fullName>
                <isActive>false</isActive>
                <label>Charity Care</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>General Fund</fullName>
                <isActive>false</isActive>
                <label>General Fund</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>