force-app/main/default/objects/Donation__c/validationRules/Require_Blood_Group_for_Blood.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Blood_Group_for_Blood</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Purpose__c, &quot;Blood&quot;), ISBLANK(TEXT(Blood_Group__c)))</errorConditionFormula>
    <errorDisplayField>Blood_Group__c</errorDisplayField>
    <errorMessage>Blood Group is required when the donation purpose is Blood.</errorMessage>
</ValidationRule>