force-app/main/default/objects/Donation__c/validationRules/Require_Organ_Type_for_Organ.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Organ_Type_for_Organ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Purpose__c, &quot;Organ&quot;), ISBLANK(Organ_Type__c))</errorConditionFormula>
    <errorDisplayField>Organ_Type__c</errorDisplayField>
    <errorMessage>Organ Type is required when the donation purpose is Organ.</errorMessage>
</ValidationRule>